posiGen_FullsendBox/src/objects/Use_Case__c.object
<CustomObject>
    <fields>
        <fullName>Alternate_Normal_Flow__c</fullName>
        <label>Alternate Normal Flow</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Assumptions__c</fullName>
        <label>Assumptions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Rules__c</fullName>
        <label>Business Rules</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Development_Status__c</fullName>
        <label>Development Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Sandbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Use</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exception_Flow__c</fullName>
        <label>Exception Flow</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Main_User_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main User Role</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Use Cases</relationshipLabel>
        <relationshipName>Use_Cases_Main_Role_for</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Normal_Flow__c</fullName>
        <label>Normal Flow</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Outline_Number__c</fullName>
        <label>Outline Number</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Post_Conditions__c</fullName>
        <label>Post Conditions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Preconditions__c</fullName>
        <label>Preconditions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reqts_Status__c</fullName>
        <label>Reqts Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Owner Input</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replaced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Triggering_Event__c</fullName>
        <label>Triggering Event</label>
        <type>TextArea</type>
    </fields>
    <label>Use Case</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Outline_Number__c</columns>
        <columns>Main_User_Role__c</columns>
        <columns>Reqts_Status__c</columns>
        <columns>Development_Status__c</columns>
        <columns>Triggering_Event__c</columns>
        <columns>Title__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Use Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Use Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>